--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
     </div>
     
     <div class="work-experience">
-      <h1>October 2023 - To date: Yomp! Arca Continental</h1>
+      <h1>October 2023 - To date: </h1>
       <h2>DevOps Specialist</h2>
       <p>Scripting in Pyhton, Bash and PowerShell.
         Management of Cloud Services in Azure.
-        Kubernetes
-      </p>
+        Kubernetes</p>
       
       <h1>April 2023- October 2023: Falabella Soriana</h1>
       <h2>Risk Engine Analyst</h2>
@@ -45,6 +44,32 @@
       <h1>April 2022- April 2023: Falabella Soriana</h1>
       <h2>Risk Engine Intern</h2>
       <p>Development of business strategies in CRM PowerCurve</p>
+    </div>
+
+    <div class="timeline">
+      <div class="container">
+        <div class="text-box">
+          <h2>Yomp! Arca Continental</h2>
+          <small>October 2023 - To Date</small>
+          <p>Scripting in Pyhton, Bash and PowerShell.
+            Management of Cloud Services in Azure.
+            Kubernetes</p>
+        </div>
+      </div>
+      <div class="container">
+        <div class="text-box">
+          <h2>Falabella Soriana</h2>
+          <small>April 2023- October 2023</small>
+          <p>Development of business strategies in CRM PowerCurve</p>
+        </div>
+      </div>
+      <div class="container">
+        <div class="text-box">
+          <h2>Falabella Soriana</h2>
+          <small>April 2022 - April 2023</small>
+          <p>Development of business strategies in CRM PowerCurve</p>
+        </div>
+      </div>
     </div>
 
   </div>
